# SpectraIIM

./: .env.example  Dockerfile  README.md  config.py  docker-compose.yml  logging_setup.py  main.py  network_monitor.py  pyproject.toml  requirements.txt  spectra_iim.db
grafana/provisioning/dashboards/: dashboards.yaml  spectraiim-dashboard.json
grafana/provisioning/datasources/: dashboards.yaml  datasource.yaml  spectraiim-dashboard.json
